# oslogigguide

./: 404.html  Gemfile  README.md  _config.yml  calendar.rb  feed.xml  index.html  models.rb  scraper.rb
.github/workflows/: calendar.yaml  scrape.yaml
_data/: calendars.json  calendars.yaml  events.json  metadata.json  sorted_events.json
_data/events/: 03vbzUBYHQ.json  04tXSYmE2s.json  0ACfbPd6l8.json  0CjM5Bm78y.json  0Eegyu0Oc1.json  0FtyXG94VN.json  0NcCT16Ttq.json  0PjwRoGFq6.json  0QNo8jTzqY.json  0RKWJA7i3C.json  0SRgH6eL4k.json  0WXCAFRXQT.json  0dlujBTBTy.json  0fHHM54Xkm.json  0ibxmVaeZD.json  0juVt7PWPx.json  0kyerDSiDA.json  0pqfiuUKrS.json  0qGvnQmrx7.json  0t8eiB1ynV.json  0v6CGJvNQZ.json  0w1KwqLHzG.json  0xIKM643kN.json  101VbzxG5Y.json  112MQCsccZ.json  12BEb5pA3O.json  13iFy9ISYd.json  17wyIRTuBA.json  188lHameFB.json  1CTnLH2QHc.json  1CmtKStNZr.json  1Gf0EfqR1f.json  1HVGlKV8ID.json  1HcBy2uPKo.json  1IIMq9y3E7.json  1K45NbqdbS.json  1OvWQ5UcGR.json  1RFCt6HJSs.json  1SJoh6UtLa.json  1T8fxdgfEL.json  (+1721 more)
_includes/: footer.html  head.html  header.html
_layouts/: default.html
_posts/: 2025-11-22-welcome-to-jekyll.markdown
assets/calendars/: 0bHpw1xVpF.ics  101VbzxG5Y.ics  1CTnLH2QHc.ics  1OvWQ5UcGR.ics  1SJoh6UtLa.ics  1eu5VKs7Ib.ics  1oX2Fht6h5.ics  1tVPaFZrPP.ics  2BNF6TsRSC.ics  2FRJRjNxeK.ics  2Px9CIZKkf.ics  2bs36kE1nJ.ics  2lIEiigbQe.ics  2vBDIaNzyu.ics  3XVAGziGRt.ics  3aygxoaTPf.ics  3kjklbzDAL.ics  3mMXJUnKC2.ics  3tIBTlySAf.ics  42mgLzGbfj.ics  (+303 more)
function/: .gitignore  Cargo.toml  README.md
function/src/: git.rs  handler.rs  main.rs
(+3 files in other folders)
