[package]
name = "oslogigguide"
version = "1.0.0"
edition = "2024"

[lib]
path = "src/handler.rs"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
git2 = "0.20.3"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
